whitespace fix

--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@
 html, body {
     margin: 0;
     padding: 0;
-    min-height: 100vh;
-    overflow-x: hidden;
+    background-color: #fafafa;
 }
 
 
@@ -60,6 +59,23 @@ html, body {
 }
 
 
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: var(--space-xxl);
+    line-height: var(--line-height-relaxed);
+    background-color: var(--background);
+    color: var(--neutral-grey-500);
+    width: 100%;
+    height: 100%;
+    min-width: 100vw;
+    min-height: 100vh;
+    overflow: hidden;
+    padding: 3.5rem 0;
+}
+
 /* Typography */
 
 .display-header {
@@ -106,22 +122,9 @@ html, body {
 
 /* Layout */
 
-.container {
-    line-height: var(--line-height-relaxed);
-    background-color: var(--background);
-    color: var(--neutral-grey-500);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: var(--space-xxl);
-    min-height: 100vh;
-    overflow-x: hidden;
-}
-
 header {
     max-width: 19.75rem;
     text-align: center;
-    margin-block-start: 3.5rem;
 }
 
 main {
@@ -180,6 +183,12 @@ main {
     .container {
         flex: grid;
         gap: var(--space-xxl);
+        /* width: 100%; */
+        max-width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        padding-block-start: 3.5rem;
+        padding-block-end: 3.5rem;
     }
 
     main {
@@ -235,21 +244,45 @@ main {
 
 @media (min-width: 80rem) { /* Desktop */
 
-    header {
-        padding-block-start: 6rem;
+
+.pixel-overlay {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100vw;
+  height: 100vh;
+  pointer-events: none;
+  opacity: 0.5;
+  z-index: 9999;
+  background: url('design/desktop-design.jpg') top left no-repeat;
+  background-size: cover;
+}
+
+    .container {
+        max-width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        padding-block-start: 6.2rem;
+        padding-block-end: 7rem;
+        gap: var(--space-xxxl);
     }
 
     main {
-        min-width: 68rem;
+        min-width: 70rem;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr;
         justify-content: center;
-        padding-block-end: 7rem;
+        row-gap: 2rem;
+        column-gap: 2rem;
+        /* padding: 1rem 0 0 0; */
     }
 
     .card {
-        max-width: 32rem;
+        max-width: 35rem;
+    }
+
+    .card .card-body {
+        gap: var(--space-xs);
     }
 
     .supervisor {
